[package]
name = "rust-kv"
version = "0.1.0"
authors = ["eastack <admin@eastack.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.7"
dashmap = "4"
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
prost-build = "0.7"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
